fix overflow

--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@ td {
   border-collapse: collapse;
   border: 1px solid #ddd;
   padding: 8px;
+  overflow: hidden;
 }
 
 thead th,
